# hackaton1-phase2

./: README.md  index.html
.claude/: settings.local.json
.github/workflows/: deploy.yml
assets/: index-BQoaXoUB.css  index-DQRJY--7.js
chatbot/: .gitignore
chatbot/.claude/: settings.local.json
chatbot/.specify/memory/: constitution.md
chatbot/backend/: .env.example  README.md  check_routes.py  create_db_schema.py  pyproject.toml  requirements.txt  test_app.py
chatbot/backend/content/: chapter-1-introduction.md  chapter-2-ros2-fundamentals.md  chapter-4-prerequisites.md  weekly-breakdown.md
chatbot/backend/content/module-ros2/: nodes.md
chatbot/backend/sql/: auth_schema.sql  schema.sql
chatbot/backend/src/: config.py
chatbot/backend/src/api/: dependencies.py  main.py
chatbot/backend/src/api/middleware/: __init__.py  error_handler.py  request_logger.py
chatbot/backend/src/api/routes/: __init__.py  admin.py  auth.py  book.py  chat.py
chatbot/backend/src/models/: __init__.py  chunk.py  query.py  response.py  source.py  user.py
chatbot/backend/src/services/: __init__.py  answer_generation_service.py  auth_service.py  chunking_service.py  content_extractor.py  indexing_service.py  personalization_service.py  retrieval_service.py
chatbot/backend/src/utils/: __init__.py  chunking.py  qdrant_client.py  validation.py
chatbot/frontend/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
chatbot/frontend/src/: App.css  App.tsx  main.tsx
chatbot/history/adr/: 001-rag-architecture-pattern.md  002-dual-mode-interaction-architecture.md  003-content-processing-retrieval-stack.md  004-grounding-refusal-logic.md  005-technology-stack.md  006-citation-traceability-system.md
chatbot/specs/001-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
(+25 files in other folders)
